--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "node": "^12.18.3",
     "npm": "^8.12.0"
   },
-  "description": "## Welcome to the MidTerm Project - the Favourite Book List App",
+  "description": "## Welcome to the MidTerm Project - the Faculty List App",
   "main": "server.js",
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
