--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
@@ -29,7 +29,7 @@
     "npm": "^8.12.0"
   },
   "description": "## Welcome to the MidTerm Project - the Faculty List App",
-  "main": "server.js",
+  "main": "index.js",
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/connect-flash": "0.0.34",
